--- a/templates/myip.html
+++ b/templates/myip.html
@@ -54,7 +54,7 @@
   color: white;
   left:0;
      position:absolute;
-
+    
    width:100%;
    height:60px;   /* Height of the footer */
 
@@ -103,7 +103,7 @@
         <td>{{ y|upper() | replace('_',' ') }} </td>
     </tr>
         {% endfor %}
-</table><br><br>
+</table><br>
 <footer>
     <br>
   <p>Credits :- Mohd Numan (one Numan)</p>
