--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@ form.example::after {
 
       </ul>
       <form class="d-flex" action="{{ url_for('inputip') }}" method="post">
-        <input class="form-control me-2" name='search' type="text" placeholder="   Enter IP Address" style="border-radius:0px 0px 0px 30px;">
+        <input class="form-control me-2" name='search' type="text" placeholder="   Enter IP Address" style="border-radius:0px 0px 0px 30px;" required>
         <button class="btn btn-primary" type="submit" style="border-radius:0px 0px 30px 0px;"><i class="fa fa-search" ></i></button>
       </form>
     </div>
@@ -110,7 +110,7 @@ form.example::after {
 
 
 <form class="example" action="{{ url_for('inputip') }}" method="post" style="margin:auto; margin-top:20%; max-width:500px">
-  <input type="text" placeholder="   Enter IP Address ..." name="search">
+  <input type="text" placeholder="   Enter IP Address ..." name="search" pattern="((([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:)|fe80:(:[0-9a-fA-F]{0,4}){0,4}%[0-9a-zA-Z]{1,}|::(ffff(:0{1,4}){0,1}:){0,1}((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])\.){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])|([0-9a-fA-F]{1,4}:){1,4}:((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])\.){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9]))|\b((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(\.|$)){4}\b)" required>
   <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 
