--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,11 @@
     font-family: 'Poppins', sans-serif;
     transition: all 0.4s ease;;
 }
-
-    body{
+body{
     background-image:url('https://images.unsplash.com/photo-1526778548025-fa2f459cd5c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=850&q=80');
     color:black;
     }
-        form.example input[type=text] {
+form.example input[type=text] {
   padding: 10px;
   font-size: 17px;
   border: 1px solid grey;
@@ -118,6 +117,8 @@ form.example::after {
     <br>
   <p>Credits :- Mohd Numan (one Numan)</p>
 </footer>
+</div>
+
 </body>
 </html>
 
