Update Code | Adding Comments

--- a/templates/myip.html
+++ b/templates/myip.html
@@ -27,8 +27,8 @@
       background-image: url(https://images.unsplash.com/photo-1478860409698-8707f313ee8b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
     }
 
-    #oneNuman {
-      /* Table Class Name : OneNuman */
+    #oneNumanTable {
+      /* Table Class Name : oneNumanTable */
       border-collapse: collapse;
       width: 70%;
       text-align: left;
@@ -36,25 +36,25 @@
       box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     }
 
-    #oneNuman td,
-    #oneNuman th {
+    #oneNumanTable td,
+    #oneNumanTable th {
       border: 1px solid #ddd;
       padding: 8px;
     }
 
-    #oneNuman tr:nth-child(even) {
+    #oneNumanTable tr:nth-child(even) {
       background-color: #f2f2f2;
     }
 
-    #oneNuman tr:nth-child(odd) {
+    #oneNumanTable tr:nth-child(odd) {
       background-color: white;
     }
 
-    #oneNuman tr:hover {
+    #oneNumanTable tr:hover {
       background-color: #ddd;
     }
 
-    #oneNuman th {
+    #oneNumanTable th {
       padding-top: 12px;
       padding-bottom: 12px;
       text-align: left;
@@ -68,7 +68,7 @@
 
   {% include 'base_header.html' %}
   <br><br>
-  <table id="oneNuman">
+  <table id="oneNumanTable">
     <tr>
       <th>Parameter</th>
       <th>Information</th>
